--- a/css/style.css
+++ b/css/style.css
@@ -1113,11 +1113,11 @@ i.phone{
   margin-top: 13.7em;
 }
 .nbs-flexisel-nav-left {
-  	left: 735px;
+  	left: 20%;
   	background: url(../images/img-sprite.png) no-repeat -185px -79px;
 }
 .nbs-flexisel-nav-right {
-  	right:46.5%;
+  	right:20%;
  	background: url(../images/img-sprite.png) no-repeat -235px -79px;
 }
 .twitter-section{
@@ -1189,10 +1189,10 @@ i.in{
 		right: 31.5%;
 	}
 	.nbs-flexisel-nav-right{
-		right:45%;
+		right:30%;
 	}
 	.nbs-flexisel-nav-left{
-		left:605px;
+		left:30%;
 	}
 	.project-description p {
 		font-size: 15px;
@@ -1473,10 +1473,10 @@ i.in{
 		margin: 0.5em 0 1em 0;
 	}
 	.nbs-flexisel-nav-left {
-		left: 450px;
+		left: %30;
 	}
 	.nbs-flexisel-nav-right{
-		right:45%;
+		right:30%;
 	}
 	.nbs-flexisel-nav-left, .nbs-flexisel-nav-right {
 		margin-top: 11.7em;
@@ -1804,10 +1804,10 @@ i.in{
 		margin-top: 8.2em;
 	}
 	.nbs-flexisel-nav-left {
-		left: 316px;
+		left: 30%;
 	}
 	.nbs-flexisel-nav-right {
-		right: 42%;
+		right: 30%;
 	}
 	.b-animate {
 		top: 57px;
